CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
project(tinySQL)
SET(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE TINYSQL_TEST_SOURCES ${PROJECT_SOURCE_DIR}/src/*test.cpp)
SET(MAIN_SOURCE_PATH ${PROJECT_SOURCE_DIR}/Bp_tree_test.cpp)
add_executable(tinySQL ${MAIN_SOURCE_PATH} ${TINYSQL_TEST_SOURCES})

SET(TINYSQL_SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(tinySQL PUBLIC ${TINYSQL_SRC_INCLUDE_DIR})



