CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
project(tinySQL_test)
SET(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE TINYSQL_TEST_SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE SQL_PARSER_SOURCES ${PROJECT_SOURCE_DIR}/parser_src/*.cpp)

SET(TEST_MAIN_PATH ${PROJECT_SOURCE_DIR}/main.cpp)
add_executable(tinySQL_test ${TEST_MAIN_PATH} ${TINYSQL_TEST_SOURCES})
add_library(SQLparser SHARED ${SQL_PARSER_SOURCES})

SET(TINYSQL_SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(tinySQL_test PUBLIC ${TINYSQL_SRC_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(tinySQL_test PRIVATE SQLparser)
